<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SNMP Cockpit Android App
  ~
  ~ Copyright (C) 2018-2019
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_main_sections"
        android:checkableBehavior="single"
        android:enabled="true">

        <item
            android:id="@+id/nav_main_monitoring_view"
            android:icon="@drawable/ic_devices"
            app:actionLayout="@layout/action_layout_counter"
            android:title="@string/menu_devices_label" />
        <item
            android:id="@+id/nav_mib_catalog"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_catalog_label" />
        <item
            android:id="@+id/nav_manage_own_queries"
            android:icon="@drawable/ic_editquery"
            android:title="@string/menu_own_queries_label" />
        <item
            android:id="@+id/nav_show_network_details"
            android:icon="@drawable/ic_network_check_black"
            android:title="@string/menu_network_details_label" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings_label" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about_label" />
    </group>
    <group
        android:id="@+id/menu_main_actions"
        android:checkableBehavior="none"
        android:enabled="true"
        android:menuCategory="secondary">
        <item
            android:id="@+id/nav_scan_wlan_code"
            android:checkable="false"
            android:icon="@drawable/ic_qr_code"
            android:title="@string/menu_action_qr_code_label" />
        <item
            android:id="@+id/nav_clear_all_devices"
            android:checkable="false"
            android:icon="@drawable/ic_eject"
            android:title="@string/menu_action_device_eject_label" />
        <item
            android:id="@+id/nav_disconnect_wifi"
            android:icon="@drawable/ic_disconnect"
            android:title="@string/menu_action_wifi_disconnect_label" />
    </group>

</menu>


